# ngopt

./: .classpath  .project  454_Hfx_bb-perm.txt  A5PipelineREADME.md  AssemblePairedIllumina.md  DCJ.java  FastQtoDraftAssembly.md  How_To_Score_Genome_Assemblies_with_Mauve.md  IdbaBuildNotes.md  LICENSE  NextGenOptimator.md  PreprocessingMultiplexedIlluminaData.md  ProjectHome.md  ReptileErrorCorrection.md  adapter.fasta  build.xml  build_pipeline.sh  ngopt_a5pipeline.README
FISH/src/: fish.cpp  usage.h
IDBA/lib/: Makefile.am
SSPACE/: SSPACE
SSPACE/example/: libraries.txt
appnote/: document.out
assemblathon/: assemblathonMauvePlots.R  assemblathon_sgescoring.sh
branches/20111012_dbscan/: build.xml
branches/20130712_miseq_longread/: build_pipeline.sh  scythe_adapter.full.fasta
branches/jgi/: .classpath  build.xml
idba-1.1.1/: Makefile.in  config.h.in
idba-1.1.1/lib/: Makefile.in
linux-x64/: fish  idba_ud  idba_ud500  scythe
linux-x86/: fish  sga
ms/: a5pipeline-appnote.bib  a5pipeline-appnote.plos.TableS1.tex  a5pipeline-appnote.plos.TableS2.tex  a5pipeline-appnote.plos.bib  a5pipeline-appnote.plos.tex  a5pipeline-appnote.tex  a5qc.cmyk.eps  makeFISHplot.R  ngopt-appnote.tex  volc_accum_plot.cmyk.eps
ms/figures/: volc_accum_plot.cmyk.eps
osx/: bwa  fish  idba  idba_hybrid  idba_ud400  scythe
src/: scoreAssembly.cpp
test/FISHInputExporter/: s_1_1_1205.fastq.gz.phage_wv8.fa.sam
test/sequence/: phiX.cassava1.8_1.fastq  phiX_p2.fastq
tools/assembly_line/: assemble-rec_JGI.sh  assembleIBS.sh  assembleMultiLibs_IBS.sh  mplex_asmline.pl  test.pl
tools/blast_tools/: filter_seqs_by_blast.pl
tools/cg_tools/: extract_ncbi_gbks.sh  filter_blast_hits.pl  make_sanity_grep_cmds.pl  swap_ccid_for_fullname  swap_ccid_for_fullname.sh  swap_ccid_for_taxon  swap_fullname_for_ccid  swap_taxon_for_ccid  swap_taxon_for_ccid.sh
tools/contigs/: fastalen
tools/gc-cov/: calc_avg-gc  calc_avg-gc.cpp  calc_minlink.pl  calc_window_gc_cov.pl  gc_calc  get_pileup.sh  get_pileup_pe.sh  get_sam_pe.sh  merge_gc-plp  summarize_cov-gc-len.pl  summarize_gc-cov-len.pl
tools/mauve_assembly_metrics/: mauveAssemblyMetrics.R
tools/pair_reads/: Makefile  pairfa  pairfq.cpp  repair  repair.cpp
tools/quality/: trimfq
tools/rast/: build_batch_RAST_submit_custom.pl  extract_job_ids.pl  wget_share.sh
tools/seqtools/: Makefile  add_org_labels.pl  add_qual_headers.pl  exmap  exmap.pl  extract-mapped.cpp  extract_annotated_sequence.pl  fastalen  filter_ctg_by_len.pl  getDistHist.pl  maf2mfa.pl  merge_kmer_counts.pl  revcomp.cpp  rmfastqnl.cpp  sample_read.cpp  split-mapped.cpp  split_scaffolds.cpp  spscaf  sumfasta.c  sumfasta.cpp  test.exmap.fastq  unshuffle.pl
tools/sopra_stuff/: exmap.pl  test.exmap.fastq
tools/tnpclean/: colifilter.pl
tools/velvet_tools/: split_velvet_by_cov.pl
trunk/: .classpath  .project  adapter.fasta  build.xml  build_pipeline.sh  scythe_adapter.fasta
trunk/FISH/: SAMPLES.txt
trunk/appnote/: document.tex
trunk/linux-x64/: fish
wiki/: A5PipelineREADME.wiki  AssemblePairedIllumina.wiki  FastQtoDraftAssembly.wiki  How_To_Score_Genome_Assemblies_with_Mauve.wiki  IdbaBuildNotes.wiki  NextGenOptimator.wiki  PreprocessingMultiplexedIlluminaData.wiki  ReptileErrorCorrection.wiki
(+484 files in other folders)
